force-app/main/default/objects/clofor_com_cfs__DepositACBal__c/fields/clofor_com_cfs__ACBalID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ACBalID__c</fullName>
    <label>A/C BALANCE ID</label>
    <referenceTo>clofor_com_cfs__ACBalance__c</referenceTo>
    <relationshipLabel>DEPOSIT+A/C BAL</relationshipLabel>
    <relationshipName>DepositACBal</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>