force-app/main/default/objects/clofor_com_cfs__DepositACBal__c/fields/clofor_com_cfs__ACBalRollUpStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ACBalRollUpStatus__c</fullName>
    <label>A/C BALANCE ROLLUP STATUS c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>