force-app/main/default/objects/clofor_com_cfs__DepositACBal__c/fields/clofor_com_cfs__DepositID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DepositID__c</fullName>
    <label>DEPOSIT ID</label>
    <referenceTo>clofor_com_cfs__Deposit__c</referenceTo>
    <relationshipLabel>DEPOSIT+A/C BAL</relationshipLabel>
    <relationshipName>DepositACBal</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>